Fix loading file under Windows